--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@d11/react-native-fast-image": "https://github.com/ds-horizon/react-native-fast-image.git#main",
     "react": "18.3.1",
     "react-native": "0.77.2"
   },
