--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
-    "@d11/react-native-fast-image": "https://github.com/ds-horizon/react-native-fast-image.git#main",
+    "@d11/react-native-fast-image": "8.13.0",
     "react": "18.3.1",
-    "react-native": "0.77.2"
+    "react-native": "0.77.2",
+    "react-native-svg": "^15.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -30,11 +31,16 @@
     "@types/react-test-renderer": "^18.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "postinstall-postinstall": "^2.1.0",
     "prettier": "2.8.8",
     "react-test-renderer": "18.3.1",
     "typescript": "5.0.4"
   },
   "engines": {
     "node": ">=18"
+  },
+  "packageManager": "yarn@3.6.4",
+  "resolutions": {
+    "@d11/react-native-fast-image@8.13.0": "patch:@d11/react-native-fast-image@npm%3A8.13.0#./.yarn/patches/@d11-react-native-fast-image-npm-8.13.0-1ba5757ff5.patch"
   }
 }
